# tt-exalens

./: .env  .gitignore  .gitmodules  .local-runner-install.sh  .pre-commit-config.yaml  =0.32  CMakeLists.txt  DEVICE_ACCESS_TRACING.md  LICENSE  LLK_TESTS_README.md  Makefile  README.md  VERSION  arc_heartbeat_repro.py  auto_gdb.sh  bug_elf.py  c++.natvis  check_niu_status.py  check_noc_status.py  cov_dump.py  cov_test.gcda  cov_test.gcno  covdump.py  covmerge.py  crash.py  debuda.py  debug_bus_signal_groups.json  google_form_submit.py  graphing_instructions.md  llk.sh  llkd.c  llkd.sh  matmul.sh  mypy.ini  print_eth_cores.py  print_private_memory.py  pydoc-markdown.yml  pyproject.toml  pyproject_toml_parse_requirements.py  python_gdb.py  (+14 more)
dbd/server/app/: CMakeLists.txt  debuda-server-standalone.cpp  module.mk
dbd/server/lib/: CMakeLists.txt  module.mk
test/: CMakeLists.txt  run-all-tests.sh  run_all.sh  test-base.sh  test_lib_run.py  test_requirements.txt
test/app/: __init__.py  print_to_ci.py  test_commands.py  test_umd_debuda.py  test_umd_ttexalens.py  test_umd_ttlens.py
test/dbd/pybind/: __init__.py  module.mk  test_bindings.cpp  test_bindings.py
test/dbd/server/: CMakeLists.txt  module.mk  test_communication.cpp  test_communication.py  test_python_communication.cpp  test_python_server.cpp  test_server.cpp  test_server.py  yaml_communication.cpp  yaml_communication.h
test/dbd/unit_tests/: README.md  __init__.py  test_base.py  test_debuda_init.py  test_firmware.py  test_lib.py  test_parse_elf.py  test_risc_debug.py
test/legacy/: run-all-tests.sh
test/legacy/inject-errors/: README.md
test/legacy/smoke-test/: test-debuda-py.sh  test-debuda-server-limited.sh  test-run-all-debuda-commands.sh
test/legacy/unit-tests/: base-unit-tests.sh  coverage-run.sh  pybind-unit-tests.sh
test/legacy/wheel-test/: run-wheel.sh  wheel-test.sh
test/smoke-test/: test-debuda-py.sh  test-debuda-server-limited.sh  test-run-all-debuda-commands.sh
test/test_elfs/: eltwise_unary_datacopy_test_trisc0.elf  eltwise_unary_datacopy_test_trisc1.elf  eltwise_unary_datacopy_test_trisc2.elf  firmware_brisc.dis  firmware_brisc.dump  firmware_brisc.elf
test/test_elfs/datacopy/: math.elf  pack.elf  unpack.elf
test/test_elfs/halt/: math.elf
test/test_elfs/math_halt/: pack.elf  unpack.elf
test/test_elfs/math_unhalt/: pack.elf
test/test_elfs/unhalt/: math.elf  unpack.elf
test/tt_lens/pybind/: __init__.py
test/tt_lens/server/: test_communication.cpp  test_communication.py  test_python_communication.cpp  test_python_server.cpp  test_server.py  unit_tests_main.cpp
test/tt_lens/unit_tests/: test_debuda_init.py  test_firmware.py  test_lib.py  test_parse_elf.py  test_risc_debug.py
test/ttexalens/pybind/: CMakeLists.txt  test_bindings.cpp  test_bindings.py
test/ttexalens/server/: CMakeLists.txt  test_communication.cpp  test_communication.py  test_python_communication.cpp  test_python_server.cpp  test_server.cpp  test_server.py  yaml_communication.cpp  yaml_communication.h
test/ttexalens/unit_tests/: README.md  __init__.py  core_simulator.py  program_writer.py  test_base.py  test_callstack.py  test_coverage.py  test_debug_bus.py  test_debug_symbols.py  test_device.py  test_exception_hierarchy.py  test_fp32.py  test_frame.py  test_frame_unwinding.py  test_gdb_checksum.py  test_gdb_checksum_e2e.py  test_gdb_mem_access.py  test_hardware_session.py  test_l1_mem_access.py  test_lib.py  test_memory_map.py  test_multicore.py  test_noc.py  test_noc1.py  test_noc_failover.py  test_pack_unpack_regfile.py  test_parse_elf.py  test_regdef_load.py  test_regdef_real_access.py  test_register_store.py  test_remote_access.py  test_remote_communication.py  test_risc_debug.py  test_search.py  test_tensix_debug.py  test_ttexalens_init.py
test/ttlens/pybind/: CMakeLists.txt  test_bindings.cpp  test_bindings.py
test/ttlens/server/: CMakeLists.txt  test_communication.cpp  test_communication.py  test_python_communication.cpp  test_python_server.cpp  test_server.cpp  test_server.py  yaml_communication.cpp  yaml_communication.h
test/ttlens/unit_tests/: README.md  __init__.py  test_base.py  test_callstack.py  test_debuda_init.py  test_firmware.py  test_lib.py  test_parse_elf.py  test_risc_debug.py  test_tensix_debug.py  test_ttlens_init.py  ttlens_graphing.md
test/unit-tests/: base-unit-tests.sh  coverage-run.sh  server-unit-tests.sh
test/wheel/: run-wheel.sh  wheel-test.sh
test/wheel-test/: run-wheel.sh  wheel-test.sh
tt_lens/pybind/: CMakeLists.txt
ttexalens/cpp/elf/: CMakeLists.txt  bindings.cpp  callstack.cpp  callstack.hpp  dwarf_attribute.cpp  dwarf_attribute.hpp  dwarf_cfi.cpp  dwarf_cfi.hpp  dwarf_cu.cpp  dwarf_cu.hpp  dwarf_die.cpp  dwarf_die.hpp  dwarf_frame.cpp  dwarf_frame.hpp  dwarf_handle.hpp  dwarf_info.cpp  dwarf_info.hpp  dwarf_location.cpp  dwarf_location.hpp  dwarf_string.hpp  elf_file.cpp  elf_file.hpp  memory_access.hpp  variable.cpp  variable.hpp
ttexalens/cpp/nanobind/: CMakeLists.txt  bind_callstack.cpp  bind_dwarf_attribute.cpp  bind_dwarf_die.cpp  bind_dwarf_frame.cpp  bind_dwarf_info.cpp  bind_elf_file.cpp  bind_memory_access.cpp  bind_variable.cpp  bindings.cpp  bindings.hpp
ttexalens/cpp/native_elf/: CMakeLists.txt  bindings.cpp
ttexalens/pybind/: CMakeLists.txt
ttexalens/pybind/inc/: bindings.h  jtag_implementation.h  new_umd_implementation.h  open_implementation.h  read_tile.hpp  ttexalens_implementation.h  umd_implementation.h
ttexalens/pybind/src/: bindings.cpp  jtag_implementation.cpp  open_implementation.cpp  (+3 more)
ttexalens/riscv-src/: CMakeLists.txt  brisc.ld  callstack.cc  cov_test.cc  coverage.md  memory.blackhole.ld  memory.grayskull.ld  memory.wormhole.ld  module.mk  ncrisc.ld  param.h  run_elf_test.cc  sample.cc  sections.ld  tmu-crt0.S  trisc0.ld  trisc1.ld  trisc2.ld  tt-gcov.c  tt-gcov.h  ttgcov-runtime.c  ttgcov-runtime.h
ttlens/pybind/: CMakeLists.txt
ttlens/riscv-src/: CMakeLists.txt  brisc.ld  callstack.cc  memory.blackhole.ld  memory.wormhole.ld  module.mk  ncrisc.ld  run_elf_test.cc  sample.cc  sections.ld  trisc0.ld  trisc1.ld  trisc2.ld
(+962 files in other folders)
